# msgbot-app

./: app.py  clean.py  dashboard.py  excel.py  main.py  orders.db  pyproject.toml
static/: style.css
templates/: buyer_invoice.html  buyers.html  dashboard.html  layout.html  login.html  register.html  sellers.html  viewer_dashboard.html
